# ttPseudoRowMajor

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
bench/: CMakeLists.txt  row_index_trace_bench.cpp  view_add_trace_bench.cpp  view_norm_trace_bench.cpp  view_ternary_trace_bench.cpp  view_trace_bench.cpp
src/: .gitkeep
tests/: CMakeLists.txt  grouped_gather_test.cpp  row_index_test.cpp  ttprm_test.cpp  view_access_test.cpp  view_lerp_rwkv_4d_test.cpp  view_lerp_rwkv_test.cpp  view_realize_test.cpp  view_ttnn_test.cpp
ttprm/: CMakeLists.txt  tensor_view_args.hpp  ttprm.hpp  view_access.hpp  view_kind.hpp  view_realize.hpp  view_realize_op.cpp
ttprm/kernel/: row_index_reader.cpp  row_index_writer.cpp  tensor_view.hpp  view_add_compute.cpp  view_add_reader.cpp  view_k_update_compute.cpp  view_mull2_compute.cpp  view_mull2_reader.cpp  view_norm_compute.cpp  view_norm_global_compute.cpp  view_norm_global_reader.cpp  view_norm_reader.cpp  view_norm_wide_compute.cpp  view_norm_wide_reader.cpp  view_realize_compute.cpp  view_realize_reader.cpp  view_realize_writer.cpp  view_rk_compute.cpp  view_rk_reader.cpp  view_ternary_compute.cpp  view_ternary_reader.cpp
